8204335: [ppc] Assembler::add_const_optimized incorrect for some inputs

Reviewed-by: mdoerr, goetz